--- a/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
@@ -26,7 +26,7 @@
   <string name="account_has_been_set">Vaihda</string>
   <string name="account_limit_update_birthday">Syntymäpäivää ei voi juuri nyt päivittää</string>
   <string name="account_mibi_center">Mi Krediitit</string>
-  <string name="account_mibi_charge">Mi Krediittien lataus</string>
+  <string name="account_mibi_charge">Top up</string>
   <string name="account_mipay_info">Mi Pay</string>
   <string name="account_no_set">Ei mitään</string>
   <string name="account_none">Ei mitään</string>
@@ -193,7 +193,7 @@
   <string name="other_devices_title">Muut laitteet</string>
   <string name="passport_Resend">Lähetä uudelleen</string>
   <string name="passport_access_denied">Pääsy kielletty</string>
-  <string name="passport_account_hint_text">Sähköpostiosoite/puhelinnumero/Mi Tilin ID</string>
+  <string name="passport_account_hint_text">Sähköpostiosoite/Puhelinnumero/Mi Tilin ID</string>
   <string name="passport_account_identity_title">Vahvista henkilöllisyytesi</string>
   <string name="passport_account_label">Mi Tili</string>
   <string name="passport_account_name">Tili: %1$s</string>
@@ -340,7 +340,7 @@ Aktivoi tilisi seuraamalla
   <string name="passport_register_by_email">Luo tili käyttäen sähköpostiosoitetta</string>
   <string name="passport_register_restricted">Liian monta tiliä on liitettynä tämän numeron kanssa, kokeile toista</string>
   <string name="passport_register_restricted_title">Tätä puhelinnumeroa ei voi käyttää</string>
-  <string name="passport_register_using_other_ways">Muita tapoja rekisteröityä</string>
+  <string name="passport_register_using_other_ways">Muita tapoja luoda tili</string>
   <string name="passport_registered_phone_num">Puhelin: %s</string>
   <string name="passport_registered_phone_user_ID">Käyttäjän ID: %s</string>
   <string name="passport_registered_phone_user_name">Käyttäjänimi: %s</string>
