--- a/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
@@ -192,7 +192,7 @@
   <string name="onscreen_merge_calls_text">Yhdistä puhelut</string>
   <string name="onscreen_message_text">Viestit</string>
   <string name="onscreen_mute_text">Mykistä</string>
-  <string name="onscreen_note_calls_text">Muistiinpano</string>
+  <string name="onscreen_note_calls_text">Muistio</string>
   <string name="onscreen_swap_calls_text">Vaihda</string>
   <string name="onscreen_switch_camera">Vaihda kamera</string>
   <string name="package_not_available">\"%s\" ei käytettävissä</string>
