--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -461,10 +461,12 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_video_focusmode_entry_continuous">CAF (automaattitarkennus)</string>
   <string name="pref_video_focusmode_title">Tarkennustila</string>
   <string name="pref_video_hfr_title">Video HFR</string>
-  <string name="pref_video_quality_entry_1080p">FHD 1080P</string>
-  <string name="pref_video_quality_entry_480p">SD 480P</string>
-  <string name="pref_video_quality_entry_4kuhd">UHD 4K</string>
-  <string name="pref_video_quality_entry_720p">HD 720P</string>
+  <string name="pref_video_quality_entry_1080p">FHD 1080P, 30fps</string>
+  <string name="pref_video_quality_entry_1080p_60fps">FHD 1080P, 60fps</string>
+  <string name="pref_video_quality_entry_480p">SD 480P, 30fps</string>
+  <string name="pref_video_quality_entry_4kuhd">UHD 4K, 30fps</string>
+  <string name="pref_video_quality_entry_4kuhd_60fps">UHD 4K, 60fps</string>
+  <string name="pref_video_quality_entry_720p">HD 720P, 30fps</string>
   <string name="pref_video_quality_entry_fwvga">FWVGA</string>
   <string name="pref_video_quality_entry_vga">VGA</string>
   <string name="pref_video_quality_entry_wqvga">WQVGA</string>
