--- a/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="allow">Salli</string>
   <string name="altitude">%.1f</string>
   <string name="altitude_longitude_Degree_format" formatted="false">"%d°%d'%d\""</string>
   <string name="altitude_title">Korkeus</string>
@@ -19,6 +20,7 @@
   <string name="calibrate_success">Kalibroitu</string>
   <string name="calibrate_tip">Vieritä palloa ympyrän ympäri kallistamalla laitettasi</string>
   <string name="calibrate_title">Kalibroi kompassi</string>
+  <string name="cancel">Peruuta</string>
   <string name="cannot_get_location">--</string>
   <string name="dialog_body_no_network">Verkkoyhteyttä ei voi muodostaa</string>
   <string name="dialog_calibrat_altitude">Kalibroidaan…</string>
@@ -51,6 +53,8 @@
   <string name="longitude">LON</string>
   <string name="mobiledata_alert_dialog_message">Kalibroidaanko korkeus yhdistämällä internetiin??</string>
   <string name="mobiledata_alert_dialog_title">Tiedonsiirtovaroitus</string>
+  <string name="open_perm_msg">Kompassi tarvitsee sijaintitiedon ja kameran käyttöoikeuden. Tämä on välttämätöntä koordinaattien määrittämiseksi ja live-esikatselun näyttämiseksi. Sallitko?</string>
+  <string name="open_perm_title">Käyttöoikeuksia vaaditaan</string>
   <string name="pressure">%.1f</string>
   <string name="pressure_title">Paine</string>
   <string name="pressure_unit">hPa</string>
