--- a/Finnish/main/Notes.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Notes.apk/res/values-fi-rFI/strings.xml
@@ -7,14 +7,14 @@
      <string name="audio_toast_file_undownload">Äänitiedostoa ei ole kokonaan ladattu tai se puuttuu</string>
      <string name="audio_toast_network_is_not_available">Verkkoyhteyttä ei voitu muodostaa</string>
      <string name="dlg_info_save_to_gallery_message">Tallennetaan kuva Galleriaan…</string>
-     <string name="edit_header_lock_description">Salainen muistiinpano</string>
-     <string name="empty_folder_import_notes">Tuo muistiinpanoja</string>
-     <string name="empty_folder_no_notes">Täällä ei ole muistiinpanoja</string>
+     <string name="edit_header_lock_description">Piilotettu muistio</string>
+     <string name="empty_folder_import_notes">Tuo muistioita</string>
+     <string name="empty_folder_no_notes">Täällä ei ole muistioita</string>
      <string name="first_enter_custom_folder_hint">Voit nimetä uudelleen tai poistaa kansioita täällä</string>
      <string name="folder_operation_delete">Poista</string>
      <string name="folder_operation_rename">Nimeä uudelleen</string>
      <string name="hide_arrow_description">Piilota</string>
-     <string name="menu_add_audio_description">Lisää äänimuistiinpano</string>
+     
      <string name="rich_text_bold_description">Lihavoi</string>
      <string name="rich_text_center_description">Keskitä</string>
      <string name="rich_text_chooser_title">Valitse tyyli</string>
@@ -22,10 +22,10 @@
      <string name="rich_text_right_description">Oikealle</string>
      <string name="rich_text_size_description">Koko</string>
      <string name="rich_text_underline_description">Alleviivaus</string>
-     <string name="save_to_gallery_failure_message">Galleriaan ei voitu tallentaa</string>
+     <string name="save_to_gallery_failure_message">Ei voitu tallentaa</string>
      <string name="save_to_gallery_icon_name">Tallenna Galleriaan</string>
-     <string name="save_to_gallery_success_message">Kuva tallennettiin Galleriaan onnistuneesti</string>
-     <string name="snippet_audio_stub">Äänimuistiinpano</string>
+     <string name="save_to_gallery_success_message">Tallennettiin onnistuneesti</string>
+     
      <string name="toast_refuse_to_record_when_in_call">Tätä toimintoa ei voi käyttää puheluiden aikana</string>
      <string name="toolbar_text_description">Tekstin tyyli</string>
      <string name="toolbar_voice_description">Ääni</string>
@@ -55,7 +55,7 @@
   <string name="cloud_trash_bin_title">Poista muistiot Mi Pilvestä</string>
   <string name="cta_reminder">Tämä sovellus tarvitsee yhteyden internetiin varmuuskopioidakseen muistiot Mi Pilveen ja myös pääsyn lukea yhteystietosi merkatakseen muistiot puheluiden aikana.</string>
   <string name="db_downgrade_clear_button">Tyhjennä sovellustiedot</string>
-  <string name="db_downgrade_clear_date_reminder">Vaihtamalla toiseen MIUI versioon vaaditaan Muistion sovellustietojen tyhjentäminen. Ennen kuin teet sen, varmista että olet ottanut varmuuskopion muistiinpanoistasi Mi Pilveen.</string>
+  <string name="db_downgrade_clear_date_reminder">Vaihtamalla toiseen MIUI versioon vaaditaan Muistion sovellustietojen tyhjentäminen. Ennen kuin teet sen, varmista että olet ottanut varmuuskopion muistioistasi Mi Pilveen.</string>
   <string name="default_folder_name">Nimeämätön kansio</string>
   <string name="delete_folder_dialog_tile">Poista kansio</string>
   <string name="dialog_privacy_revoke_tips">Valtuutuksen peruuttamisen jälkeen sovellus lopettaa tietojen keräämisen ja kaikki siihen liittyvät tiedot poistetaan palvelimilta. Tämä saattaa tehdä sovelluksesta lähes käyttökelvottoman. Peruutetaanko valtuutus siitä huolimatta? Varmista tilisi turvallisuus kirjautumalla osoitteeseen i.mi.com ennen Mi Pilvi -palveluiden valtuutuksen peruuttamista.</string>
@@ -104,6 +104,7 @@
   <string name="info_note_enter_desktop">Lisätty Aloitusnäytölle</string>
   <string name="loading_text">Odota hetki…</string>
   <string name="login_sync">Kirjaudu sisään &amp; synkronoi</string>
+  <string name="menu_add_audio_description">Lisää äänimuistio</string>
   <string name="menu_add_description">Lisää muistio</string>
   <string name="menu_add_folder">Lisää kansioon</string>
   <string name="menu_add_folder_description">Lisää kansio</string>
@@ -146,23 +147,24 @@
   <string name="pref_title_common">Lisäasetukset</string>
   <string name="pref_title_font_size">Fontin koko</string>
   <string name="pref_title_note_style">Tyyli</string>
-  <string name="pref_title_show_root_folder_in_homepage">Näytä vain nopeat muistiinpanot aloitussivulla</string>
-  <string name="pref_title_skip_confirm_for_quick_delete">Nopea poistaminen</string>
+  <string name="pref_title_show_root_folder_in_homepage">Näytä vain pikamuistiot aloitussivulla</string>
+  <string name="pref_title_skip_confirm_for_quick_delete">Pikapoistaminen</string>
   <string name="recover_notes_hint">Tapahtui virhe, mene i.mi.com palauttaaksesi muistiot.</string>
   <string name="redo">Tee uudelleen</string>
   <string name="refuse_to_open_as_pic_because_of_loading">Odota, kunnes muistio on ladannut ja yritä uudelleen.</string>
   <string name="refuse_to_share_as_pic_because_of_content">Tämä muistio on liian suuri jaettavaksi.</string>
   <string name="rename_folder_dialog_tile">Nimeä kansio uudelleen</string>
-  <string name="root_folder_name">Nopeat muistiot</string>
+  <string name="root_folder_name">Pikamuistiot</string>
   <string name="search">Muistio</string>
   <string name="search_hint">Etsi muistioita</string>
-  <string name="search_keyword_notes">Muistio;Muistiinpano;Muistikirja;Memo</string>
+  <string name="search_keyword_notes">Muistio;Muistiinpano;Muistikirja;Memo;Lista;Muistilista;Kauppalista</string>
   <string name="search_label">Haetaan…</string>
   <string name="search_path_notes">Järjestelmäsovellukset/Muistio</string>
   <string name="search_setting_description">Hae tekstiä muistioistasi</string>
   <string name="select_account_prompt">Synkronoi muistiot</string>
   <string name="set_alarm_description">Aseta hälytys</string>
-  <string name="snippet_image_stub">[Kuva]</string>
+  <string name="snippet_audio_stub">Äänimuistio</string>
+  <string name="snippet_image_stub">Kuvamuistio</string>
   <string name="snippet_image_template">[Kuva %1$s]</string>
   <string name="sns_action_send">Lähetä</string>
   <string name="sns_choose_quality_high">Korkea (%1$s)</string>
