--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -217,6 +217,7 @@ Et voi zoomata näppäimistöön tai navigointipalkkiin."</string>
   <string name="add_device_admin_msg">Aktivoidaanko laitteenhallintasovellus?</string>
   <string name="add_facerecoginition_text">Lisää kasvojen tiedot</string>
   <string name="add_fingerprint_cancel_button_text">Takaisin</string>
+  <string name="cancel_description">Peruuta</string>
   <string name="add_fingerprint_done_msg">Voit nyt avata laitteen lukituksen sormenjäljellä.</string>
   <string name="add_fingerprint_done_title">Olet valmis rokkaamaan!</string>
   <string name="add_fingerprint_edge_instruction_msg">Liikuta sormeasi, jotta tunnistin tallentaa sormenjälkesi reunat.</string>
@@ -1187,6 +1188,7 @@ Siirtonopeus"</string>
   <string name="confirm_action">OK</string>
   <string name="confirm_bind_xiaomi_account_dialog_title">Lisää</string>
   <string name="confirm_convert_to_fbe_warning">Haluatko varmasti poistaa käyttäjätiedot ja ottaa tiedostojen salauksen käyttöön?</string>
+  <string name="confirm_description">Vahvista</string>
   <string name="confirm_download_cancelation_dialog_message">Peruutetaanko lataus?</string>
   <string name="confirm_enable_oem_unlock_text">VAROITUS: laitteen suojaustoiminnot eivät toimi tämän asetuksen ollessa käytössä.</string>
   <string name="confirm_enable_oem_unlock_title">Sallitaanko OEM:n lukituksen avaus?</string>
@@ -1871,6 +1873,7 @@ Saat lisätietoja organisaatiosi järjestelmänvalvojalta."</string>
   <string name="failed_to_open_app_settings_toast">Sovelluksen %1$s asetuksia ei voi avata</string>
   <string name="failed_to_shut_down_find_device_content">Etsi laite -toimintoa ei voitu poistaa käytöstä. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="failed_to_shut_down_find_device_title">Ei voitu poistaa käytöstä</string>
+  <string name="fallback_home_title">Odota hetki…</string>
   <string name="fcc_equipment_id">Varustetunnus</string>
   <string name="file_privacy_password_role_instruction">Yksityiset tiedostosi säilytetään täällä.</string>
   <string name="filter">Suodata</string>
@@ -2242,6 +2245,9 @@ Voit muuttaa tätä asetusta myöhemmin kohdassa Asetukset > Sovellukset ja ilmo
   <string name="key_combination_power_back">Virta + Takaisin</string>
   <string name="key_combination_power_home">Virta + Koti</string>
   <string name="key_combination_power_menu">Virta + Valikko</string>
+  <string name="key_fsg_dialog_message">Käytät navigointiin koko näytön eleitä. Painikekohtaiset ominaisuudet eivät ole nyt käytettävissä. Vaihdetaanko painikkeisiin?</string>
+  <string name="key_fsg_dialog_negative">Peruuta</string>
+  <string name="key_fsg_dialog_positive">Vaihda painikkeisiin</string>
   <string name="key_gesture_function_dialog_message">%1$s on pikavalinta toiminnolle %2$s. Korvataanko toiminnolla %3$s?</string>
   <string name="key_gesture_function_dialog_negative">Peruuta</string>
   <string name="key_gesture_function_dialog_positive">Korvaa</string>
@@ -3441,7 +3447,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="privacy_mode_dialog_title">Vierastila</string>
   <string name="privacy_mode_enable_sum">Piilotetaan viestit, muistiot, kuvat, asetukset ja saapuvat puhelut</string>
   <string name="privacy_mode_enable_title">Vierastila</string>
-  <string name="privacy_notes">Muistiinpanot</string>
+  <string name="privacy_notes">Muistiot</string>
   <string name="privacy_password">Yksityisyydensuojan salasana</string>
   <string name="privacy_password_add_account">Lisää</string>
   <string name="privacy_password_add_account_info">Lisää Mi Tili siltä varalta, että unohdat sen ja joudut palauttamaan salasanasi</string>
@@ -3465,9 +3471,9 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="privacy_password_remind_bindaccount_title">Lisää Mi Tili</string>
   <string name="privacy_password_settings">Käytä Yksityisyydensuojan salasanaa</string>
   <string name="privacy_password_settings_next">Seuraava</string>
-  <string name="privacy_password_settings_titles">Yksityisyydensuojan salasana suojaa sinun viestit, kuvat, tiedostot, muistiinpanot ja sovellukset.</string>
-  <string name="privacy_password_settings_titles_elder_mode">Yksityisyydensuojan salasana suojaa sinun kuvat, tiedostot ja muistiinpanot.</string>
-  <string name="privacy_password_settings_titles_second_space">Yksityisyydensuojan salasana suojaa sinun viestit, kuvat, tiedostot, muistiinpanot ja sovellukset.</string>
+  <string name="privacy_password_settings_titles">Yksityisyydensuojan salasana suojaa sinun viestit, kuvat, tiedostot, muistiot ja sovellukset.</string>
+  <string name="privacy_password_settings_titles_elder_mode">Yksityisyydensuojan salasana suojaa sinun kuvat, tiedostot ja muistiot.</string>
+  <string name="privacy_password_settings_titles_second_space">Yksityisyydensuojan salasana suojaa sinun viestit, kuvat, tiedostot, muistiot ja sovellukset.</string>
   <string name="privacy_password_title">Yksityisyydensuojan salasana</string>
   <string name="privacy_password_toggle_summary">Vaadi salasanaa jokaisella kerralla, kun yksityisiä kohteita käytetään.</string>
   <string name="privacy_password_transparent_tiltle"/>
