--- a/Finnish/main/miui.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/miui.apk/res/values-fi-rFI/strings.xml
@@ -469,7 +469,7 @@
   <string name="no_network">Verkkoyhteyttä ei voi muodostaa</string>
   <string name="no_sim">SIM-korttia ei tunnistettu.</string>
   <string name="noon">ip.</string>
-  <string name="note">Muistiinpano</string>
+  <string name="note">Muistio</string>
   <string name="organization">Yritys</string>
   <string name="perm_payment_dspt">Salli sovelluksen suorittaa maksu, käyttäen Mi Pay -palvelua</string>
   <string name="perm_payment_lab">Mi Pay</string>
